Update README with HybridSorter performance analysis details
Added detailed performance breakdown and analysis results for HybridSorter, highlighting execution times and percentile-based metrics. This update provides clarity on performance improvements and data processing efficiency.